# Reverge-Package-File-Library

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Reverge Package File Library.sln  Reverge Package File Library.vcxproj  Reverge Package File Library.vcxproj.filters
include/: Reverge Package File Library.h  archive_common.hpp  archive_exception.hpp  archive_file.hpp  archive_reader.hpp  archive_writer.cpp  archive_writer.hpp  memory_mapped_file.hpp
lib/: RPFL64.idb  RPFL64.lib
src/: archive_file.cpp  archive_reader.cpp  archive_writer.cpp  memory_mapped_file.cpp
test/: ReadTest.gfs  TestWriteFromDisk.txt  test.cpp  test.vcxproj
tests/: GFS.bt  WriteTest.gfs  test.cpp
